--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <section class="info-section">
             <h3>Ghi chú:</h3>
             <ul>
+                <li>Bảng B: thi kỹ năng lập trình dành cho học sinh THCS (thi cá nhân).</li>
+                <li>Học sinh C1 sẽ được yêu cầu sử dụng Python để giải các bài toán thuộc chương trình THPT. (Dành cho
+                    trường chuyên) - Thi theo đội</li>
                 <li>Học sinh C2 sẽ được yêu cầu sử dụng Python để giải các bài toán thuộc chương trình THPT.</li>
                 <li>Các đội thi cũng có thể tập trung vào việc giải các bài tập mẫu, tham gia các cuộc thi lập trình
                     trực tuyến để nâng cao kỹ năng lập trình của mình.</li>
