--- a/html/learning_resource.html
+++ b/html/learning_resource.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson Plan</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -41,7 +41,6 @@
                 <li><a href="#">Lesson Extra: Hướng dẫn giải đề mẫu</a></li>
             </ul>
         </section>
-        <a href="login.html" class="button">Login</a>
     </div>
 </body>
 
