--- a/html/learning_resource.html
+++ b/html/learning_resource.html
@@ -20,9 +20,10 @@
                 <li><a href="learning_resource/Round1/lesson1.html">Lesson 1: Ôn tập kiểu dữ liệu và vòng lặp</a></li>
                 <li><a href="learning_resource/Round1/lesson2.html">Lesson 2: Xử lý chuỗi và cấu trúc điều khiển</a>
                 </li>
-                <li><a href="#">Lesson 3: Sử dụng syntax và kiến thức cơ bản</a></li>
-                <li><a href="#">Lesson 4: Chuyển đổi kiểu dữ liệu và Big-O Notation</a></li>
-                <li><a href="#">Lesson 5: Ôn tập Object và class trong Python</a></li>
+                <li><a href="learning_resource/Round1/Lesson3.html">Lesson 3: Sử dụng syntax</a></li>
+                <li><a href="learning_resource/Round1/Lesson4.html">Lesson 4: Kiến thức về mảng, xử lý mảng</a></li>
+                <li><a href="#">Lesson 5: Chuyển đổi kiểu dữ liệu và Big-O Notation</a></li>
+                <li><a href="#">Lesson 6: Ôn tập Object và class trong Python</a></li>
                 <li><a href="#">Lesson Extra: Giải đề mẫu và Học thuộc syntax</a></li>
             </ul>
         </section>
