--- a/html/learning_resource.html
+++ b/html/learning_resource.html
@@ -22,17 +22,21 @@
                 </li>
                 <li><a href="learning_resource/Round1/Lesson3.html">Lesson 3: Sử dụng syntax</a></li>
                 <li><a href="learning_resource/Round1/Lesson4.html">Lesson 4: Kiến thức về mảng, xử lý mảng</a></li>
-                <li><a href="#">Lesson 5: Chuyển đổi kiểu dữ liệu và Big-O Notation</a></li>
-                <li><a href="#">Lesson 6: Ôn tập Object và class trong Python</a></li>
-                <li><a href="#">Lesson Extra: Giải đề mẫu và Học thuộc syntax</a></li>
+                <li><a href="learning_resource/Round1/Lesson5.html">Lesson 5: Chuyển đổi kiểu dữ liệu và Big-O
+                        Notation</a></li>
+                <li><a href="learning_resource/Round1/Lesson6.html">Lesson 6: Ôn tập Object và class trong Python</a>
+                </li>
+                <li><a href="learning_resource/Round1/LessonExtra.html">Lesson Extra: Giải đề mẫu và Học thuộc
+                        syntax</a></li>
             </ul>
         </section>
         <section class="lesson-round">
             <h3>Round 2:</h3>
             <ul>
-                <li><a href="#">Lesson 6: Giải thích và tối ưu thuật toán</a></li>
-                <li><a href="#">Lesson 7: Hướng dẫn nâng cao giải thuật toán</a></li>
-                <li><a href="#">Lesson Extra: Giải thuật toán tại nhà</a></li>
+                <li><a href="learning_resource/Round2/Lesson6.html">Lesson 6: Giải thích và tối ưu thuật toán</a></li>
+                <li><a href="learning_resource/Round2/Lesson7.html">Lesson 7: Hướng dẫn nâng cao giải thuật toán</a>
+                </li>
+                <li><a href="learning_resource/Round2/LessonExtra.html">Lesson Extra: Giải thuật toán tại nhà</a></li>
             </ul>
         </section>
         <section class="lesson-round">
