--- a/html/learning_resource.html
+++ b/html/learning_resource.html
@@ -42,9 +42,10 @@
         <section class="lesson-round">
             <h3>Round 3:</h3>
             <ul>
-                <li><a href="#">Lesson 8: Chuẩn bị tâm lý cho học sinh</a></li>
-                <li><a href="#">Lesson 9: Ôn tập giải thuật toán mức độ trung bình</a></li>
-                <li><a href="#">Lesson Extra: Hướng dẫn giải đề mẫu</a></li>
+                <li><a href="learning_resource/Round3/Lesson8.html">Lesson 8: Chuẩn bị tâm lý cho học sinh</a></li>
+                <li><a href="learning_resource/Round3/Lesson9.html">Lesson 9: Ôn tập giải thuật toán mức độ trung
+                        bình</a></li>
+                <li><a href="learning_resource/Round3/LessonExtra.html">Lesson Extra: Hướng dẫn giải đề mẫu</a></li>
             </ul>
         </section>
     </div>
