--- a/html/learning_resource.html
+++ b/html/learning_resource.html
@@ -48,7 +48,11 @@
                 <li><a href="learning_resource/Round3/LessonExtra.html">Lesson Extra: Hướng dẫn giải đề mẫu</a></li>
             </ul>
         </section>
+        <a href="book.html" class="button">Sách Ôn Tập</a>
     </div>
+
+
+
 </body>
 
 </html>
