--- a/html/book.html
+++ b/html/book.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div class="container" style="margin: 30%">
+    <div class="container">
         <a class="title" href="../../learning_resource.html">
             <h1>Digi<span class="digi">Uni</span></h1>
         </a>
-        <h2>Nhúng file PDF vào trang HTML</h2>
-        <iframe src="pdfbook.pdf" width="800px" height="1500px">
+        <h2>Sách Luyện Thi Tin Học Trẻ Python</h2>
+        <iframe src="pdfbook.pdf" width="700px" height="1000px">
             Trình duyệt của bạn không hỗ trợ hiển thị file PDF.
             <a href="pdfbook.pdf">Tải file PDF về</a>
         </iframe>
